<resources>
    <string name="app_name">TamanIndoo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Layanan</string>
    <string name="menu_gallery">Pengaturan</string>
    <string name="menu_slideshow">Kesluar</string>
    <string name="Layanan">Layanan</string>

    <string name="enter_text_here">Enter text here</string>
    <string name="generate">Generate</string>
    <string name="scanner">Scanner</string>
    <string name="barcode_image">Barcode Image</string>
    <string name="inbox">Inbox</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawerOpen">Open</string>
    <string name="drawerClose">Close</string>

</resources>