<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/LayananFragment">

    <fragment
        android:id="@+id/LayananFragment"
        android:name="com.blogspot.yourfavoritekaisar.tamanindoo.ui.home.LayananFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_layanan" />

    <fragment
        android:id="@+id/PengaturanFragment"
        android:name="com.blogspot.yourfavoritekaisar.tamanindoo.ui.gallery.PengaturanFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_pengaturan" />

    <fragment
        android:id="@+id/KeluarFragment"
        android:name="com.blogspot.yourfavoritekaisar.tamanindoo.ui.slideshow.KeluarFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_keluar" />
</navigation>