<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    android:gravity="top"
    tools:context=".ui.generate.GenerateActivity">

    <Button
        android:id="@+id/btn_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_text"
        android:text="@string/generate"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/edt_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_barcode"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_margin="4dp"
        android:hint="@string/enter_text_here"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete" />

    <ImageView
        android:id="@+id/iv_barcode"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/ic_baseline_texture_100"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/barcode_image" />

</RelativeLayout>